--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"start": "node index.js",
 		"server": "nodemon index.js",
 		"client": "npm run start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+		"webhook": "forever sendgrid_webhook.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -21,10 +22,17 @@
 		"concurrently": "^4.1.0",
 		"cookie-session": "^1.3.3",
 		"express": "^4.16.4",
+		"localtunnel": "^1.9.2",
+		"lodash": "^4.17.11",
 		"mongoose": "^5.4.19",
 		"nodemon": "^1.18.10",
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0",
+		"path-parser": "^4.2.0",
+		"sendgrid": "^5.2.3",
 		"stripe": "^6.29.0"
+	},
+	"devDependencies": {
+		"forever": "^1.0.0"
 	}
 }
